@@ -117,7 +117,7 @@ public class ScopedApp extends App {
         }
 
         if (resourceType == null) {
-            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).toList());
+            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).collect(Collectors.toList()));
         }
 
         results = results
@@ -134,7 +134,7 @@ public class ScopedApp extends App {
         }
 
         if (resourceNs == null) {
-            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).toList());
+            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).collect(Collectors.toList()));
         }
 
         results = results
@@ -151,7 +151,7 @@ public class ScopedApp extends App {
         }
 
         if (provider == null) {
-            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).toList());
+            throw new IllegalArgumentException("too many constructs found for: " + relativeTypeRef + ", available: " + results.stream().map(Map.Entry::getKey).collect(Collectors.toList()));
         }
 
         results = results
